--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <script defer src="js/main.js"></script>
 </head>
 <body>
-    <!-- Add your HTML content here -->
+    <embed>https://www.youtube.com/watch?v=_PJxw5dmvZc</embed>
 </body>
 </html>
