--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <script defer src="js/main.js"></script>
 </head>
 <body>
-    <embed>https://www.youtube.com/watch?v=_PJxw5dmvZc</embed>
+    <video width="1920" height="1080" controls>
+        <source src="https://www.youtube.com/watch?v=_PJxw5dmvZc">
+        https://www.youtube.com/watch?v=_PJxw5dmvZc</video>
+    </video>
+    <iframe src="//www.youtube.com/embed/XDf2nhfxVzg?rel=0&amp;wmode=opaque&amp;start=74" allowfullscreen="true" style="border: none; width: 640px; height: 360px;"></iframe>
 </body>
 </html>
