--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <video width="1920" height="1080" controls>
-        <source src="https://www.youtube.com/watch?v=_PJxw5dmvZc">
+        <source src="https://www.youtube.com/watch?v=_PJxw5dmvZc" type="video/webm">
         https://www.youtube.com/watch?v=_PJxw5dmvZc</video>
     </video>
     <iframe src="//www.youtube.com/embed/XDf2nhfxVzg?rel=0&amp;wmode=opaque&amp;start=74" allowfullscreen="true" style="border: none; width: 640px; height: 360px;"></iframe>
