--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
         <source src="https://www.youtube.com/watch?v=_PJxw5dmvZc" type="video/webm">
         https://www.youtube.com/watch?v=_PJxw5dmvZc</video>
     </video>
-    <iframe src="//www.youtube.com/embed/XDf2nhfxVzg" allowfullscreen="true" style="border: none; width: 640px; height: 360px;"></iframe>
+    <iframe src="https://www.youtube.com/embed/XDf2nhfxVzg" allowfullscreen="true" style="border: none; width: 640px; height: 360px;"></iframe>
 </body>
 </html>
