--- a/index.html
+++ b/index.html
@@ -8,10 +8,6 @@
     <script defer src="js/main.js"></script>
 </head>
 <body>
-    <video width="1920" height="1080" controls>
-        <source src="https://www.youtube.com/watch?v=_PJxw5dmvZc" type="video/webm">
-        https://www.youtube.com/watch?v=_PJxw5dmvZc</video>
-    </video>
-    <iframe src="https://www.youtube.com/embed/XDf2nhfxVzg" allowfullscreen="true" style="border: none; width: 640px; height: 360px;"></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/_PJxw5dmvZc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 </body>
 </html>
